--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
 	},
 	"peerDependencies": {
 		"n8n-workflow": "*"
+	},
+	"dependencies": {
+		"@types/fluent-ffmpeg": "^2.1.27",
+		"fluent-ffmpeg": "^2.1.3"
 	}
 }
